# lolbot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.rdoc  main.c  xdcc.h  xdcc.rl
src/: globals.h  handler.c  handler.h  irc.c  irc.h  irc_request.c  irc_request.h  main.c  network.c  network.h  state_machine.c  state_machine.h  state_machine.rl  xdcc.c  xdcc.h  xdcc.rl
tests/: irc_parser_tests.c  irc_tests.c  minunit.h  xdcc_tests.c
